--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@
     margin-left: 30px;
     margin-top: 25px;
 }
-.banner-watch i:hover{
+.banner-watch:hover i{
     color: #47b2e4;
 }
 .logos{
@@ -139,17 +139,18 @@
 }
 .head{
     width: 100%;
-    height: 400px;
+    height: 350px;
 }
 .section-tittle{
     text-align: center;
-    margin-top: 40px;
+     margin-top: 40px;
     font-size: 32px;
     font-weight: bold;
      text-transform: uppercase; 
     margin-bottom: 20px;
     color: #37517e;
      font-family: "Jost", sans-serif; 
+     position: relative;
 }
 .about-flex{
     display: flex;
@@ -191,4 +192,298 @@ line-height: 1.5;
 .learn a:hover{
     background-color: #47b2e4;
     color: #fff;
+}
+.parts{
+    display: flex;
+    background-color: #f3f5fa;
+    height: 600px;
+}
+.left{
+    width: 50%;
+    margin-left: 140px;
+    margin-top: 80px;
+}
+.right{
+    width: 50%;
+    margin-top: 80px;
+}
+.left-top{
+    font-weight: 350;
+    font-size: 30px;
+    color: #37517e;
+    font-family: "Jost", sans-serif;
+    line-height: 1.2;
+}
+.left-top strong{
+    font-weight: bolder;
+}
+.left-center{
+    font-size: 15px;
+    color: #848484;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    margin-top: 25px;
+    line-height: 1.3;
+}
+.left-bottom{
+    margin-top: 30px;
+}
+.lfetFlex{
+    width: 500px;
+    background-color: #fff;
+    height: 40px;
+    margin-top: 40px;
+    padding: 10px 20px;
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+}
+.left-bottom p span{
+    color: #47b2e4;
+    font-size: 20px;
+    font-weight: 600;
+}
+.left-bottom p:hover{
+    color: #47b2e4;
+}
+.persentage{
+    display: flex;
+    height: 500px;
+}
+.left-image{
+    margin-top: 80px;
+    width: 48%;
+    margin-left: 140px;
+}
+.right-flex{
+    margin-top: 60px;
+    width: 42%;
+    margin-right: 100px;
+}
+.right-top-flex{
+    font-weight: 700;
+    font-size: 32px;
+    color: #37517e;
+    font-family: "Poppins", sans-serif;
+}
+.right-center-flex{
+    font-family: "Open Sans", sans-serif;
+    color: #444444;
+    font-style: italic!important;
+    margin-top: 20px;
+}
+.skill{
+    display: flex;
+    justify-content: space-between;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+    color: #37517e;
+    font-size: .75rem;
+    margin-top: 35px;
+   
+}
+.right-bottom-flex .progress-bar-wrap{
+    background: #e8edf5;
+    height: 10px;
+    margin: 7px;
+}
+.right-bottom-flex .progress-bar{
+    height: 10px;
+    transition: 0.9s;
+    background-color: #4668a2;
+}
+.services{
+    background-color: #f3f5fa; 
+    height: 550px; 
+}
+.service-top{
+    width: 1140px;
+    margin-left: 100px;
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
+    color: #444444;
+    line-height: 1.3;
+    font-size: 17px;
+    margin-top: 30px;
+}
+.service-bottom{
+    display: flex;
+    margin-top: 30px;
+    padding: 50px 30px;
+    margin-left: 30px;
+    margin-right: 50px;
+}
+.service-bottom h4 a{
+    text-decoration: none;
+    color: #37517e;
+    font-weight: 500;
+    margin-bottom: 15px;
+    font-size: 24px;
+    font-family: "Jost", sans-serif;
+    display: inline-block;
+    margin-top: 30px;
+}
+.service-bottom p{
+    line-height: 24px;
+    font-size: 14px;
+    font-family: "Open Sans", sans-serif;
+    color: #444444;
+}
+ .box{ 
+    border: solid 2px #fff;
+    height: 160px;
+    padding: 50px ;
+    margin-left: 30px;
+    background-color: #fff;
+    box-shadow: 0px 0 25px 0 rgb(0 0 0 / 10%);
+} 
+.service-bottom i{
+    color: #47b2e4;
+    font-size: 36px;
+}
+.service-bottom h4 a:hover{
+    color: #47b2e4;
+} 
+.box:hover h4 a{
+    color: #47b2e4;
+}
+.call-to-action{
+    height: 300px;
+    background: url(../cta-bg.jpg) fixed center;
+    background-size: cover;
+}
+.main{
+    background-color: rgba(40, 58, 90, 0.9);
+    height: 300px;
+}
+.action{
+    display: flex;
+    justify-content: space-between;
+}
+.left-action h3{
+    color: #fff;
+    font-size: 28px;
+    font-weight: 700;
+    font-family: "Jost", sans-serif;
+}
+.action-bottom{
+    font-family: "Open Sans", sans-serif;
+    color: #fff;
+    margin-top: 25px;
+    line-height: 1.3;
+    font-size: 16px;
+}
+.left-action{
+    width: 58%;
+    margin-left: 120px;
+    margin-top: 120px;
+}
+.right-action a{
+    text-decoration: none;
+    margin-top: 160px;
+    display: inline-block;
+    margin-right: 180px;
+    padding: 12px 40px;
+    margin-left: 30px;
+    border-radius: 50px;
+    color: #fff;
+    font-size: 16px;
+    border: 2px solid #fff;
+    font-weight: 500;
+    font-family: "Jost", sans-serif;
+    letter-spacing: 1px;
+    transition: 0.5s;
+}
+.right-action a:hover{
+    background-color: #47b2e4;
+    border: #47b2e4;
+}
+.portfolio{
+    width: 85%;
+    margin-left: 100px;
+}
+.row-image{
+    display: flex;
+    flex-wrap: wrap;
+   margin-top: 20px;
+}
+.row-image .img7{
+    margin-bottom: 20px;
+}
+.img{
+    padding: 10px 10px 10px 10px;
+}
+.port-top{
+    text-align: center;
+    padding-bottom: 30px;
+    font-family: "Open Sans", sans-serif;
+    color: #444444;
+    font-size: 17px;
+    margin-top: 20px;
+}
+.port-center{
+    text-align: center;
+}
+.port-center ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 20px; 
+    font-family: "Open Sans", sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 1;
+    border-radius: 50px;
+    transition: all 0.3s;
+    
+}
+.port-center ul .filter-alive{
+    background-color: #47b2e4;
+    color: #fff;
+}
+.port-center ul li:hover{
+    background-color: #47b2e4; 
+    color: #fff;
+}
+.team{
+    width: 100%;
+    height: 650px;
+    background-color:#f3f5fa ;
+}
+.team-top{
+    text-align: center;
+    padding-bottom: 30px;
+    font-family: "Open Sans", sans-serif;
+    color: #444444;
+    font-size: 17px;
+    margin-top: 30px;
+}
+.team{
+    width: 100%;
+    margin: auto;
+}
+.team-bottom{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 82%;
+    margin-left: 120px;  
+} 
+.team-bottom .post{
+    width: 50%;
+    margin-top: 50px;
+    margin-left: 30px;
+}
+.full{
+    display: flex;
+    background-color: #fff;
+    width: 480px; 
+    padding: 30px;
+    margin-top: 30px;
+    box-shadow: 0px 0 25px 0 rgb(0 0 0 / 10%);
+    border-radius: 5px;
+}
+.full .people{
+    border-radius: 100px;
+    overflow: hidden;
 }
