--- a/main.css
+++ b/main.css
@@ -400,19 +400,8 @@ line-height: 1.5;
     border: #47b2e4;
 }
 .portfolio{
-    width: 85%;
+    width: 90%; 
     margin-left: 100px;
-}
-.row-image{
-    display: flex;
-    flex-wrap: wrap;
-   margin-top: 20px;
-}
-.row-image .img7{
-    margin-bottom: 20px;
-}
-.img{
-    padding: 10px 10px 10px 10px;
 }
 .port-top{
     text-align: center;
@@ -445,6 +434,63 @@ line-height: 1.5;
     background-color: #47b2e4; 
     color: #fff;
 }
+.portfolio-bottom{
+    display: flex;
+}
+.port-info{
+    display: flex; 
+    position: absolute;
+    left: 0;
+    bottom: 0; 
+    background: rgba(55, 81, 126, 0.8);
+    padding: 10px 15px;
+    opacity: 0;
+}
+.portfolio-item:hover .port-info{
+    opacity: 1;
+}
+.port-bottom {
+    margin-top: 10px; 
+    margin-left: 220px;
+}
+.port-bottom a{
+    display: inline-block;
+    text-decoration: none;
+    font-size: 20px;
+    color: #fff;
+}
+.port-bottom a:hover{
+    color: #47b2e4;
+}
+.port-image{
+    position: relative;  
+    margin-left: 30px;
+    overflow: hidden;
+    margin-top: 30px;
+}
+.port-image img{
+    transition: all 0.6s;
+}
+.port-image:hover img{
+    transform: scale(1.3);
+} 
+.port-app{
+    margin-left: 15px;
+    margin-bottom: 10px;
+    color: #fff;
+}
+.port-app h4{
+    font-weight: 600;
+    color: #fff;
+    margin-bottom: 0px;
+    font-weight: 600;
+    color: #fff;
+    margin-bottom: 0px;
+    font-family: "Jost", sans-serif;
+}
+.port-app p{
+    margin-top: 8px;
+}
 .team{
     width: 100%;
     height: 650px;
@@ -457,6 +503,8 @@ line-height: 1.5;
     color: #444444;
     font-size: 17px;
     margin-top: 30px;
+    width: 85%;
+    margin-left: 100px;
 }
 .team{
     width: 100%;
@@ -466,18 +514,21 @@ line-height: 1.5;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 82%;
-    margin-left: 120px;  
+    width: 85%;
+    margin-left: 110px;  
 } 
 .team-bottom .post{
     width: 50%;
-    margin-top: 50px;
-    margin-left: 30px;
+    margin-left: 25px;
+}
+.team-bottom a i{
+    display: inline-block;
+    right: 40px;
 }
 .full{
     display: flex;
     background-color: #fff;
-    width: 480px; 
+    width: 500px; 
     padding: 30px;
     margin-top: 30px;
     box-shadow: 0px 0 25px 0 rgb(0 0 0 / 10%);
@@ -487,3 +538,55 @@ line-height: 1.5;
     border-radius: 100px;
     overflow: hidden;
 }
+.post h4{
+    font-weight: 700;
+    margin-bottom: 10px;
+    font-size: 20px;
+    color: #37517e;
+    font-family: "Jost", sans-serif;
+}
+.post span{
+    font-size: 15px;
+    padding-bottom: 10px;
+    font-weight: 500;
+    font-family: "Open Sans", sans-serif;
+    color: #444444;
+}
+.post hr{
+    width: 50px;
+}
+.post p{
+    margin: 10px 0 0 0;
+    font-size: 14px;
+    font-family: "Open Sans", sans-serif;
+    color: #444444; 
+    line-height: 1.2;
+    width: 290px;
+}
+.social{
+    margin-top: 20px;
+    margin-right: 10px;
+}
+.social a{
+    text-decoration: none;
+    background: #eff2f8;
+    width: 32px;
+    height: 32px;
+    padding: 6px;
+    border-radius: 50px;
+    transition: ease-in-out 0.3s;
+}
+.social a i{
+    color: #37517e;
+    font-size: 16px;
+    margin: 0 2px;
+}
+.social a:hover{
+    background-color: #47b2e4;
+    padding-left: 6px;
+}
+.social a i:hover{
+    color: #fff;
+}
+
+
